Création .C et .H dans le model

--- a/model/Makefile
+++ b/model/Makefile
@@ -5,12 +5,15 @@ DIRLIB=../lib
 
 
 
-all: libmodel.a
+all: libmodel.a main_model
 
 
 
-libmodel.a: main_model.o
+libmodel.a: main_model.o carte.o sous_marin.o joueur.o
 	ar -rv $(DIRLIB)/$@ $^
+
+main_model:main_model.o carte.o sous_marin.o joueur.o test.o
+	$(CC) $(CFLAGS) -c $<  -o $@
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $<  -o $@
