ajout du mapping de la carte

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -pedantic-errors -MMD -g -I./view -I./model
-LDFLAGS= -lSDL2 
+LDFLAGS=  -L./lib -lview -lmodel -lSDL2
 DIRLIB=../lib
 
 
