mis à jour controlleur

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -pedantic-errors -MMD -g -I./view -I./model
-LDFLAGS= -lSDL2 
+LDFLAGS=  -L./lib -lview -lmodel -lSDL2
 DIRLIB=../lib
 
 
@@ -9,7 +9,7 @@ all: libcontroller.a
 
 
 
-libcontroller.a: main_controller.o
+libcontroller.a: main_controller.o control_battlefield.o
 	ar -rv $(DIRLIB)/$@ $^
 
 %.o: %.c
@@ -20,9 +20,8 @@ libcontroller.a: main_controller.o
 
 clean:
 	rm -f *~ *.d *.o
-	
+
 distclean:
 	rm ../lib/libcontroller.a
 
 include $(wildcart .d)
-
