--- a/model/Makefile
+++ b/model/Makefile
@@ -9,11 +9,11 @@ all: libmodel.a
 
 
 
-libmodel.a: main_model.o IA.o carte.o joueur.o
+libmodel.a: main_model.o carte.o joueur.o
 	ar -rv $(DIRLIB)/$@ $^
 
 %.o: %.c
-	$(CC) $(CFLAGS) -o $@ -c $<
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f *~ *.d *.o
