--- a/model/Makefile
+++ b/model/Makefile
@@ -1,22 +1,34 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -pedantic-errors -MMD -g 
-LDFLAGS= -lSDL2
+LDFLAGS= -lSDL2 -lcmocka
 DIRLIB=../lib
 
 
+DEBUG=no
+ifeq ($(DEBUG),yes)
+CFLAGS+=-g
+endif
 
 all: libmodel.a
 
-
+MYTEST=no
+ifeq ($(MYTEST),yes)
+all: UTest_modele
+endif
 
 libmodel.a: main_model.o carte.o joueur.o
 	ar -rv $(DIRLIB)/$@ $^
 
+UTest_modele: LDFLAGS+= -lcmocka -coverage
+UTest_modele: CFLAGS+= -coverage
+UTest_modele: UTest_modele.o joueur_gcov.o
+	$(CC) $^ $(LDFLAGS)  -o $@
+
+joueur_gcov.o: joueur.c
+	$(CC) -c  $(CFLAGS)  $< -o $@
+
 %.o: %.c
 	$(CC) $(CFLAGS) -c $<  -o $@
-
-
-
 
 clean:
 	rm -f *~ *.d *.o
@@ -25,4 +37,3 @@ distclean:
 	rm ../lib/libmodel.a
 
 include $(wildcart .d)
-
