makefile test unitaire et lcov

--- a/model/Makefile
+++ b/model/Makefile
@@ -1,9 +1,13 @@
 CC=gcc
-CFLAGS=-Wall -Wextra -pedantic-errors -MMD -g 
+CFLAGS=-Wall -Wextra -pedantic-errors -MMD -g
 LDFLAGS= -lSDL2
 DIRLIB=../lib
 
-
+TEST=no
+ifeq ($(TEST),yes)
+CFLAGS += -coverage
+LDFLAGS += -coverage
+endif
 
 all: libmodel.a
 
@@ -11,12 +15,13 @@ all: libmodel.a
 
 libmodel.a: main_model.o carte.o joueur.o IA.o
 	ar -rv $(DIRLIB)/$@ $^
+	rm -f *~ *.d *.o
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f *~ *.d *.o
+	rm -f *~ *.d *.o *.gcda *.gcno *.gcov
 	
 distclean:
 	rm ../lib/libmodel.a
